--- a/forms/login.html
+++ b/forms/login.html
@@ -4,7 +4,7 @@
     <meta http-equiv=Content-Type content="text/html;charset=UTF-8">
     <title>Recording Authentication</title>
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css" integrity="sha384-5sAR7xN1Nv6T6+dT2mhtzEpVJvfS3NScPQTrOxhwjIuvcA67KV2R5Jz6kr4abQsz" crossorigin="anonymous">
-    <link href="/rec-auth/forms/styles.css" rel="stylesheet">
+    <link href="/bbb-rec-auth/forms/styles.css" rel="stylesheet">
   </head>
   <body>
     <div class="main-block">
