Re-factor recording access based on visibility in GL v3

--- a/forms/unpublished.html
+++ b/forms/unpublished.html
@@ -8,18 +8,12 @@
   </head>
   <body>
     <div class="main-block">
-      <h1>Room access code</h1>
+      <h1>Access Restricted</h1>
       <form action="" method="post">
         <hr>
-        <div class="error" style="display: ERR_DISPLAY;">Invalid Credientials</div>
-        <label id="icon" for="access_code"><i class="fas fa-th"></i></label>
-        <input type="text" name="access_code" id="access_code" placeholder="Access Code" required/>
-
-        <input type="hidden" name="target" value="TARGET">
-        
-        <div class="btn-block">
-          <button type="submit">Send</button>
-        </div>
+        <h4>
+          The Recording might not be published or appropriate visibility not assigned.
+        </h4>
       </form>
     </div>
   </body>
